# jutils

./: .gitignore  README.md  meson.build  notes.txt
src/: commands.hpp  filter.cpp  io.cpp  io.hpp  ls.cpp  main.cpp  netstat.cpp  parse.cpp  print.cpp  ps.cpp  select.cpp  slice.cpp  sort.cpp  transform.cpp  util.cpp  util.hpp
test/: test.csv  test.regex  test2.csv
