project('jutils', 'cpp', default_options : ['warning_level=3', 'cpp_std=c++17'])

src = [
  'src/io.cpp',
  'src/main.cpp',
  'src/util.cpp',

  'src/filter.cpp',
  'src/ls.cpp',
  'src/parse.cpp',
  'src/select.cpp',
  'src/slice.cpp',
  'src/sort.cpp',
]

executable('jutils', src, include_directories : ['deps'])
